Fix vertical alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -101,6 +101,7 @@
   z-index: 1;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .cover__description-text {
